src/objects/Group_Info__c.object
<CustomObject>
    <fields>
        <fullName>Building_Type__c</fullName>
        <label>Building Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bâtiment agricole</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centre d&apos;achat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplex résidentiel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Édifice public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entrepôt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ferme</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Garage commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Garage résidentiel attaché</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Garage résidentiel détaché</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immeuble à logements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immeuble à vocation commerciale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immeuble à vocation commerciale et résidentielle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immeuble industriel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maison détachée</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maison de ville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maison jumelée</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remise (ou cabanon)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Résidence d&apos;étudiants/logements de chambres</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Résidence pour personnes âgées</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Résidence secondaire (chalet)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Triplex résidentiel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unité de condo commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unité de condo industriel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unité de condo résidentiel</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Circumstances_of_the_Incident__c</fullName>
        <label>Circumstances of the Incident</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Documentation_de_l_environnement__c</fullName>
        <description>Documentation de l&apos;environnement de la pièce avant prélèvement</description>
        <inlineHelpText>Documentation de l&apos;environnement de la pièce avant prélèvement</inlineHelpText>
        <label>Documentation of the Room (Pre-Sampling)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Equipment_Involved__c</fullName>
        <label>Equipment Involved</label>
        <picklist>
            <picklistValues>
                <fullName>Armoire de branchement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armoire de mesurage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centrale à bio-masse / co-génération</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centrale au gaz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centrale hydroélectrique</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centrale photovoltaïque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commutateur de transfert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compteur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Condensateur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conducteur de Branchement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conduit omnibus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cosse de jonction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Démarreur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disjoncteur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entraînement à Fréquence Variable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Éolienne</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Équipement de commutation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Générateur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interrupteur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Isolateur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ligne de distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ligne de transport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moteur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onduleur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panneau de contrôle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panneau de distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parafoudre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poste de transformation</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Identify_the_Parts_Taken_From_Others__c</fullName>
        <description>Identifier les pièces prélevés par d&apos;autres</description>
        <inlineHelpText>Identifier les pièces prélevés par d&apos;autres</inlineHelpText>
        <label>Identify the Parts Taken From Others</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Individual_Directive__c</fullName>
        <description>Directive particulière sur le format des conclusions</description>
        <inlineHelpText>Directive particulière sur le format des conclusions</inlineHelpText>
        <label>Individual Directive</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Keybox_Code__c</fullName>
        <label>Keybox Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mandate_Objectives__c</fullName>
        <label>Mandate Objectives</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mandate__c</fullName>
        <label>Mandate</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <label>Manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturing__c</fullName>
        <label>Manufacturing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Measures_Taken__c</fullName>
        <label>Measures Taken</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mechanical_Engineer_Subtype__c</fullName>
        <label>Mechanical Engineer Subtype</label>
        <picklist>
            <controllingField>Type_of_Mechanical_Engineer__c</controllingField>
            <picklistValues>
                <fullName>Appareil de levage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appareil domestique</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blessures corporelles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chauffage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Climatisation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Combustion et appareils à gaz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Machinerie et équipement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plomberie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procédés industriels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Protection d&apos;incendie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Réfrigération</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ventilation</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nature_of_the_Incident__c</fullName>
        <label>Nature of the Incident</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note_for_the_Investigator__c</fullName>
        <label>Note for the Investigator</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Implicated_Experts__c</fullName>
        <label>Other Implicated Experts</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Part_Purchased_And_Or_Installed_By__c</fullName>
        <label>Part Purchased And/Or Installed By</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Part_Sampled_By__c</fullName>
        <label>Part Sampled By</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Places_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Places Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Purchase_Installation_Date__c</fullName>
        <label>Purchase/Installation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Related_Projet__c</fullName>
        <label>Related Projet</label>
        <referenceTo>Projet__c</referenceTo>
        <relationshipLabel>Group Info</relationshipLabel>
        <relationshipName>Group_Info</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spill_Amount__c</fullName>
        <label>Spill Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spill_Date__c</fullName>
        <label>Spill Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Subcontractor_Invoice_Sent__c</fullName>
        <label>Subcontractor Invoice Sent</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type_of_Materials__c</fullName>
        <label>Type of Materials</label>
        <picklist>
            <picklistValues>
                <fullName>Céramique/Verre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Métaux/Non-Métaux</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Polymère/Plastique</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Mechanical_Engineer__c</fullName>
        <label>Type of Mechanical Engineer</label>
        <picklist>
            <picklistValues>
                <fullName>Bâtiments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Général</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Spill__c</fullName>
        <label>Type of Spill</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_of_Construction__c</fullName>
        <label>Year of Construction</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Info par groupe</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Group Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Info par groupe</pluralLabel>
    <recordTypes>
        <fullName>G_nie_civil</fullName>
        <active>true</active>
        <label>Génie civil</label>
    </recordTypes>
    <recordTypes>
        <fullName>G_nie_lectrique</fullName>
        <active>true</active>
        <label>Génie électrique</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>